# Project-1-Tool-Calling-Chatbot

./: .env.example.txt  .gitignore  README.md  pyproject.toml
src/cli_assistant/: __init__.py  cli.py  config.py  llm.py
src/cli_assistant/tools/: base.py  calculator.py  file_ops.py  registry.py  weather.py
src/cli_assistant/ui/: formatter.py
