[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cli-assistant"
version = "0.1.0"
description = "AI-powered CLI assistant with tool support"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0", 
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]
requires-python = ">=3.9"

[project.scripts]
cli-assistant = "cli_assistant.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cli_assistant"]
